plugins {
    id 'java'
    id 'maven'
    id 'application'
    id 'checkstyle'
}

repositories {
    mavenCentral()
    mavenLocal()
}

apply from: '../opencadc.gradle'

sourceCompatibility = 1.8

group = 'org.opencadc'

mainClassName = 'org.opencadc.critwall.Main'

dependencies {
    compile 'org.opencadc:cadc-storage-adapter:[0.8,1.0)'
    compile 'org.opencadc:cadc-util:[1.9.6,2.0)'
    compile 'org.opencadc:cadc-inventory:[0.9.4,2.0)'
    // cadc-inventory-db-0.15 is in the vos2 feature branch
    compile 'org.opencadc:cadc-inventory-db:[0.14.5,0.15.0)'
    compile 'org.opencadc:cadc-registry:[1.7,2.0)'
    compile 'org.opencadc:cadc-vosi:[1.3.6,2.0)'
    compile 'org.opencadc:cadc-vos:[1.2,2.0)'

    runtime 'org.opencadc:cadc-storage-adapter-fs:[0.7,)'
    runtime 'org.opencadc:cadc-storage-adapter-swift:[0.6,)'
    
    testCompile 'junit:junit:[4.12,5.0)'
    intTestCompile 'org.opencadc:cadc-storage-adapter-fs:[0.7,)'
    
    // work around because 1.8.0-beta4 prints exceptions in log, eg:
    // java.lang.NoSuchFieldException: mdc
    //    at java.base/java.lang.Class.getDeclaredField(Class.java:2411)
    //    at org.apache.log4j.MDCFriend.fixForJava9(MDCFriend.java:13)
    runtime 'org.slf4j:slf4j-api:1.7.36'
    runtime 'org.slf4j:jcl-over-slf4j:1.7.36'
    runtime 'org.slf4j:slf4j-log4j12:1.7.36'
}

configurations {
  runtime.exclude group: 'org.slf4j', module: 'slf4j-reload4j'
}
